chore: verify api docs
